fix alterando dados do banco do deploy